@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940712
+MANIFEST for ded, version t19940715
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
